<resources>
    <string name="app_name">Decorama Store</string>
    <string name="button">Button</string>
    <string name="decorama_logo">Decorama Logo</string>
    <string name="login_with_google">Login WIth Google</string>
    <string name="sign_out">sign out</string>
    <string name="get_data">Get Data</string>
    <string name="hello_welcome_back">Hello Welcome Back</string>
    <string name="username">*Username*</string>
    <string name="profit">Profit</string>
    <string name="order_history">Order History</string>
    <string name="order_place">Order Place</string>
    <string name="netflix_logo">Netflix Logo</string>
    <string name="youtube_logo">Youtube Logo</string>
    <string name="logout">Logout</string>
    <string name="fill_the_form">Fill The Form</string>
    <string name="insert_name">Insert Name</string>
    <string name="name">Name</string>
    <string name="_9_9_9999">9-9-9999</string>
    <string name="insert_email">Insert Email</string>
    <string name="email_account">Email Account</string>
    <string name="insert_password">Insert Password</string>
    <string name="account_password">Account Password</string>
    <string name="insert_pin">Insert Pin</string>
    <string name="account_pin">Account Pin</string>
    <string name="profile_number">Profile Number</string>
    <string name="insert_number">Insert Number</string>
    <string name="next">Next</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="insert_buyer_email">Insert Buyer Email</string>
    <string name="payment_via">Payment Via</string>
    <string name="pick_image">Pick Image</string>
    <string name="stock">Stock</string>
    <string name="input_stock">Input Stock</string>
    <string name="price">Price</string>
    <string name="_37_500">37.500</string>
    <string name="clean_profit">Clean Profit</string>
    <string name="_0">0</string>
    <string name="submit">Submit</string>
    <string name="thanks_for_buying">THANKS FOR BUYING!</string>
    <string name="transaction_prof">Transaction Prof</string>
    <string name="insert_buyer_name">Insert Buyer Name</string>
    <string name="_25_06_2002">25.06.2002</string>
    <string name="background_marble">background marble</string>
    <string name="history">History</string>
    <string name="detail_page">DETAIL PAGE</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="example_name">Example Name</string>
    <string name="buyer_email">Buyer Email</string>
    <string name="example_email">Example Email</string>
    <string name="payment_methods">Payment Method</string>
    <string name="example_payment_method">Example Payment Method</string>
    <string name="example_profit">Example Profit</string>
    <string name="proof_transaction">Proof Transaction</string>
    <string name="back">Back</string>
    <string name="profits">PROFIT</string>
    <string name="total_this_month">Total This Month</string>
    <string name="date">Date</string>
    <string name="_40000">40000</string>
    <string name="total_previoust_month">Total Previous Month</string>
</resources>