<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillFrom"
    android:orientation="vertical"
    android:background="@drawable/background_papper"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fill_the_form"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_name"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9_9_9999"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_account"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_email"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_pass"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_password"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_pin"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_pins"
        android:inputType="number"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_pin"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_number"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_profileNumber"
        android:inputType="number"
        android:maxLength="1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_number"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/next"
        />
</LinearLayout>