<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentMethodFill"
    android:orientation="vertical"
    android:background="@drawable/background_papper"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tv_buyer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/et_buyer_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_buyer_name"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer_email"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_buyer_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/insert_buyer_email"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_via"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_payment_method"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/payment_via"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proof_transaction"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
        <Button
            android:id="@+id/btn_pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/button_background_grey"
            android:layout_gravity="center_vertical"
        />

       <ImageView
           android:id="@+id/iv_proof"
           android:layout_width="90dp"
           android:layout_height="90dp"
           android:layout_marginStart="40dp"
           android:contentDescription="@string/transaction_prof"
           android:scaleType="fitXY"
           android:src="@drawable/no_image" />
   </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_stock"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/input_stock"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Insert Name"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/_37_500"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clean_profit"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        />
</LinearLayout>










