<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_papper"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:contentDescription="@string/decorama_logo"
        android:src="@drawable/decorama_logo"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello_welcome_back"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        />
    <Button
        android:id="@+id/btn_orderPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="25dp"
        android:text="@string/order_place"
        android:background="@drawable/button_background"
        />
    <Button
        android:id="@+id/btn_orderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/order_history"
        android:background="@drawable/button_background"
        />
    <Button
        android:id="@+id/btn_profit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/profit"
        android:background="@drawable/button_background"
        />
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/logout"
        android:background="@drawable/button_background"
        />
</LinearLayout>