<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfitActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background_papper"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profits"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:id="@+id/rv_profit_month"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:listitem="@layout/list_profit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_this_month"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/total_this_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_this_month"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_previoust_month"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/total_previous_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_this_month"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/profit_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background_grey"
        android:text="@string/back"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        />
</LinearLayout>










